@@ -29,28 +29,18 @@ import de.tum.in.www1.artemis.domain.hestia.ExerciseHint;
 import de.tum.in.www1.artemis.domain.hestia.ExerciseHintActivation;
 import de.tum.in.www1.artemis.domain.hestia.ProgrammingExerciseTask;
 import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseStudentParticipation;
-import de.tum.in.www1.artemis.exercise.ExerciseUtilService;
 import de.tum.in.www1.artemis.exercise.programming.ProgrammingExerciseUtilService;
 import de.tum.in.www1.artemis.participation.ParticipationUtilService;
 import de.tum.in.www1.artemis.repository.ProgrammingExerciseRepository;
 import de.tum.in.www1.artemis.repository.ProgrammingExerciseTestCaseRepository;
 import de.tum.in.www1.artemis.repository.ProgrammingSubmissionTestRepository;
-import de.tum.in.www1.artemis.repository.ResultRepository;
-import de.tum.in.www1.artemis.repository.UserRepository;
 import de.tum.in.www1.artemis.repository.hestia.ExerciseHintActivationRepository;
 import de.tum.in.www1.artemis.repository.hestia.ExerciseHintRepository;
 import de.tum.in.www1.artemis.service.hestia.ProgrammingExerciseTaskService;
-import de.tum.in.www1.artemis.user.UserUtilService;
 
 class ExerciseHintIntegrationTest extends AbstractSpringIntegrationIndependentTest {
 
     private static final String TEST_PREFIX = "exercisehintintegration";
-
-    @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
-    private ResultRepository resultRepository;
 
     @Autowired
     private ExerciseHintRepository exerciseHintRepository;
@@ -72,12 +62,6 @@ class ExerciseHintIntegrationTest extends AbstractSpringIntegrationIndependentTe
 
     @Autowired
     private ProgrammingExerciseUtilService programmingExerciseUtilService;
-
-    @Autowired
-    private ExerciseUtilService exerciseUtilService;
-
-    @Autowired
-    private UserUtilService userUtilService;
 
     @Autowired
     private ParticipationUtilService participationUtilService;
@@ -111,8 +95,8 @@ class ExerciseHintIntegrationTest extends AbstractSpringIntegrationIndependentTe
         List<ProgrammingExerciseTask> sortedTasks = programmingExerciseTaskService.getSortedTasks(exercise);
 
         hints = new ArrayList<>(exerciseHintRepository.findByExerciseId(exerciseLite.getId()));
-        exerciseHint = hints.get(0);
-        exerciseHint.setProgrammingExerciseTask(sortedTasks.get(0));
+        exerciseHint = hints.getFirst();
+        exerciseHint.setProgrammingExerciseTask(sortedTasks.getFirst());
         hints.get(1).setProgrammingExerciseTask(sortedTasks.get(1));
         hints.get(2).setProgrammingExerciseTask(sortedTasks.get(2));
         exerciseHintRepository.saveAll(hints);
@@ -129,7 +113,7 @@ class ExerciseHintIntegrationTest extends AbstractSpringIntegrationIndependentTe
 
         var availableHints = request.getList("/api/programming-exercises/" + exercise.getId() + "/exercise-hints/available", HttpStatus.OK, ExerciseHint.class);
         assertThat(availableHints).hasSize(1);
-        assertThat(availableHints.get(0).getContent()).isNullOrEmpty();
+        assertThat(availableHints.getFirst().getContent()).isNullOrEmpty();
     }
 
     @Test
@@ -145,9 +129,9 @@ class ExerciseHintIntegrationTest extends AbstractSpringIntegrationIndependentTe
 
         var availableHints = request.getList("/api/programming-exercises/" + exercise.getId() + "/exercise-hints/activated", HttpStatus.OK, ExerciseHint.class);
         assertThat(availableHints).hasSize(1);
-        assertThat(availableHints.get(0).getId()).isEqualTo(exerciseHint.getId());
-        assertThat(availableHints.get(0).getContent()).isEqualTo(exerciseHint.getContent());
-        assertThat(availableHints.get(0).getCurrentUserRating()).isEqualTo(4);
+        assertThat(availableHints.getFirst().getId()).isEqualTo(exerciseHint.getId());
+        assertThat(availableHints.getFirst().getContent()).isEqualTo(exerciseHint.getContent());
+        assertThat(availableHints.getFirst().getCurrentUserRating()).isEqualTo(4);
     }
 
     @Test
@@ -360,7 +344,7 @@ class ExerciseHintIntegrationTest extends AbstractSpringIntegrationIndependentTe
         CodeHint codeHint = new CodeHint();
         codeHint.setTitle("Hint 1");
         codeHint.setExercise(exerciseLite);
-        codeHint.setProgrammingExerciseTask(programmingExerciseTaskService.getSortedTasks(exercise).get(0));
+        codeHint.setProgrammingExerciseTask(programmingExerciseTaskService.getSortedTasks(exercise).getFirst());
 
         exerciseHintRepository.save(codeHint);
 
