@@ -66,6 +66,7 @@ import de.tum.in.www1.artemis.repository.SubmissionRepository;
 import de.tum.in.www1.artemis.repository.TeamRepository;
 import de.tum.in.www1.artemis.repository.TextSubmissionRepository;
 import de.tum.in.www1.artemis.service.ParticipationService;
+import de.tum.in.www1.artemis.service.ParticipationVcsAccessTokenService;
 import de.tum.in.www1.artemis.service.UriService;
 import de.tum.in.www1.artemis.service.connectors.ci.ContinuousIntegrationService;
 import de.tum.in.www1.artemis.service.connectors.vcs.VersionControlService;
@@ -85,6 +86,9 @@ public class ParticipationUtilService {
 
     @Autowired
     private StudentParticipationRepository studentParticipationRepo;
+
+    @Autowired
+    private ParticipationVcsAccessTokenService participationVCSAccessTokenService;
 
     @Autowired
     private ExerciseRepository exerciseRepo;
@@ -225,7 +229,7 @@ public class ParticipationUtilService {
         result.completionDate(ZonedDateTime.now());
         submission.addResult(result);
         submission = submissionRepository.saveAndFlush(submission);
-        return submission.getResults().get(0);
+        return submission.getResults().getFirst();
     }
 
     /**
@@ -313,7 +317,7 @@ public class ParticipationUtilService {
         final var repoName = (exercise.getProjectKey() + "-" + login).toLowerCase();
         participation.setRepositoryUri(String.format("http://some.test.url/scm/%s/%s.git", exercise.getProjectKey(), repoName));
         participation = programmingExerciseStudentParticipationRepo.save(participation);
-
+        participationVCSAccessTokenService.createParticipationVCSAccessToken(userUtilService.getUserByLogin(login), participation);
         return (ProgrammingExerciseStudentParticipation) studentParticipationRepo.findWithEagerLegalSubmissionsAndResultsAssessorsById(participation.getId()).orElseThrow();
     }
 
@@ -589,7 +593,7 @@ public class ParticipationUtilService {
         var participations = studentParticipationRepo.findByExerciseId(exercise.getId());
         var allSubmissions = new ArrayList<Submission>();
         participations.forEach(participation -> {
-            Submission submission = submissionRepository.findAllByParticipationId(participation.getId()).get(0);
+            Submission submission = submissionRepository.findAllByParticipationId(participation.getId()).getFirst();
             allSubmissions.add(submissionRepository.findWithEagerResultAndFeedbackAndAssessmentNoteById(submission.getId()).orElseThrow());
         });
         return allSubmissions;
